<resources>
	<string name="app_name">Emi</string>
	<string name="action_settings">Settings</string>
	<string name="action_recent">Search by: Recent</string>
	<string name="action_popular">Search by: Popular</string>
	<string name="action_mixed">Search by: Popular &amp; Recent</string>
	<string name="action_refresh">Refresh Now</string>
	<string name="action_frequency">Refresh Frequency</string>
	<string name="enter_search_dialog_text_label">Search for Twitter Tags:</string>
	<string name="list_empty">Click the search button below to get started!</string>
	<string name="detail_list_empty">No Results found. Please start another search.</string>
	<string name="hash">#</string>
	<string name="heart">\u2665</string>

	<string name="tweets_label">Tweets </string>
	<string name="following_label">Following </string>
    <string name="followers_label">Followers </string>
    <string name="likes_label">Likes </string>

    <string name="search_results_error">Oops! Wacky hijinks ensued. Please try again later.</string>
	<string name="search_no_results">No results match your query.</string>
	<string name="refresh_message">Updating feed with</string>
	<string name="schedule_message">Next feed update in</string>

	<string name="settings_search_type_header">Search Tweets By:</string>
	<string name="settings_search_type_recent">Most Recent</string>
	<string name="settings_search_type_popular">Most Popular</string>
	<string name="settings_search_type_mixed">Mixed</string>
	<string name="settings_search_frequency_header">Feed Update Frequency:</string>
	<string name="settings_search_frequency_high">High (Every 1 Minute)</string>
	<string name="settings_search_frequency_medium">Medium (Every 3 Minutes)</string>
	<string name="settings_search_frequency_low">Low (Every 5 Minutes)</string>
	<string name="settings_search_count_header">Feed Count:</string>
	<string name="settings_search_count_high">100</string>
	<string name="settings_search_count_medium">50</string>
	<string name="settings_search_count_low">25</string>
	<string name="settings_reminder">
		* You can also Swipe Down to refresh the current feed anytime.
	</string>
</resources>
